--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    root   /var/www/html;
+    root   /var/www/html/laravel/public;
     index  index.php;
 
     #error_page  404              /404.html;
