Add route page Fix nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,6 +32,11 @@ server {
         include        fastcgi_params;
     }
 
+    location / {
+        client_max_body_size 56M;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
