--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "stichoza/google-translate-php": "^5.1"
+        "stichoza/google-translate-php": "^5.1",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
