--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
         max-size: "10m"
     links:
       - php:php
-    restart: always
-    mem_limit: 64m
+    restart: no
+#    mem_limit: 64m
 
   php:
     build: ./php
@@ -30,8 +30,8 @@ services:
       - redis
     volumes:
       - ./:/var/www/html
-    restart: always
-    mem_limit: 126m
+    restart: no
+#    mem_limit: 126m
 
   mysql:
     image: mysql:8.0.32
@@ -46,8 +46,8 @@ services:
       - ./data/mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-    restart: always
-    mem_limit: 256m
+    restart: no
+#    mem_limit: 256m
 
   redis:
     image: redis
@@ -60,8 +60,8 @@ services:
     volumes:
       - ./data/redis:/data
     command: redis-server --appendonly yes
-    restart: always
-    mem_limit: 128m
+    restart: no
+#    mem_limit: 128m
 
   phpmyadmin:
     image: phpmyadmin
@@ -73,7 +73,7 @@ services:
         max-size: "10m"
     environment:
       - PMA_ARBITRARY=1
-    restart: always
-    mem_limit: 64m
+    restart: no
+#    mem_limit: 64m
 
 
